--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-spring.h2.console.enabled=true
-
 server.tomcat.max-threads=200
+
+logging.level.org.springframework=DEBUG
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/myapi
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
